src/styles.less
// Custom Theming for NG-ZORRO
// For more information: https://ng.ant.design/docs/customize-theme/en
// @import "../node_modules/ng-zorro-antd/ng-zorro-antd.less";

// 引入官方提供的默认 less 样式文件
@import "ng-zorro-antd/ng-zorro-antd.less";


// @import "bootstrap/scss/bootstrap-utilities.scss";


// "./node_modules/bootstrap/dist/css/bootstrap-utilities.min.css"

// 引入官方提供的暗黑 less 样式文件
// @import "~ng-zorro-antd/ng-zorro-antd.dark.less";

// 引入官方提供的紧凑 less 样式文件
// @import "~ng-zorro-antd/ng-zorro-antd.compact.less";

// 引入官方提供的阿里云 less 样式文件
// @import "~ng-zorro-antd/ng-zorro-antd.aliyun.less";

// Override less variables to here
// View all variables: https://github.com/NG-ZORRO/ng-zorro-antd/blob/master/components/style/themes/default.less

// @primary-color: #1890ff;
/* You can add global styles to this file, and also import other style files */

// 默认主体配置 bootstrap

:root {
	--bs-blue: #0d6efd;
	--bs-indigo: #6610f2;
	--bs-purple: #6f42c1;
	--bs-pink: #d63384;
	--bs-red: #dc3545;
	--bs-orange: #fd7e14;
	--bs-yellow: #ffc107;
	--bs-green: #198754;
	--bs-teal: #20c997;
	--bs-cyan: #0dcaf0;
	--bs-white: #fff;
	--bs-gray: #6c757d;
	--bs-gray-dark: #343a40;
	--bs-gray-100: #f8f9fa;
	--bs-gray-200: #e9ecef;
	--bs-gray-300: #dee2e6;
	--bs-gray-400: #ced4da;
	--bs-gray-500: #adb5bd;
	--bs-gray-600: #6c757d;
	--bs-gray-700: #495057;
	--bs-gray-800: #343a40;
	--bs-gray-900: #212529;
	--bs-primary: #0d6efd;
	--bs-secondary: #6c757d;
	--bs-success: #198754;
	--bs-info: #0dcaf0;
	--bs-warning: #ffc107;
	--bs-danger: #dc3545;
	--bs-light: #f8f9fa;
	--bs-dark: #212529;
	--bs-primary-rgb: 13, 110, 253;
	--bs-secondary-rgb: 108, 117, 125;
	--bs-success-rgb: 25, 135, 84;
	--bs-info-rgb: 13, 202, 240;
	--bs-warning-rgb: 255, 193, 7;
	--bs-danger-rgb: 220, 53, 69;
	--bs-light-rgb: 248, 249, 250;
	--bs-dark-rgb: 33, 37, 41;
	--bs-white-rgb: 255, 255, 255;
	--bs-black-rgb: 0, 0, 0;
	--bs-body-rgb: 33, 37, 41;
	--bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
	--bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
	--bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
	--bs-body-font-family: var(--bs-font-sans-serif);
	--bs-body-font-size: 1rem;
	--bs-body-font-weight: 400;
	--bs-body-line-height: 1.5;
	--bs-body-color: #212529;
	--bs-body-bg: #fff;
}

// 深色主体配置 bootstrap

[data-themes] {
	--bs-body-bg: #212529; 
	--bs-white-rgb: 33, 37, 41;
}

.f0 {
	font-size: 0;
}

.f12 {
    font-size: 12px !important;
}

.f13 {
    font-size: 13px !important;
}

.f14 {
    font-size: 14px !important;
}

.f15 {
    font-size: 15px !important;
}

.f16 {
    font-size: 16px !important;
}

.f17 {
    font-size: 17px !important;
}

.f18 {
    font-size: 18px !important;
}

.f20 {
    font-size: 20px !important;
}

.f21 {
    font-size: 21px !important;
}


// 通用样式

.trigger {
    display: inline-block;
}

.trigger:hover {
    color: #1890ff;
    background: #f8f8f9;
}

// 菜单黑暗主体下的描边
.ant-menu-dark .ant-badge-count {
    box-shadow: unset;
}

// 滚动条样式优化
::-webkit-scrollbar,
body::-webkit-scrollbar {
    width: 14px;
}

::-webkit-scrollbar,
body::-webkit-scrollbar {
    width: 14px;
}

::-webkit-scrollbar-thumb,
body::-webkit-scrollbar-thumb {
    background-color: #434343;
    border-radius: 6px;
    border: 2px solid #262626;
}

::-webkit-scrollbar-thumb,
body::-webkit-scrollbar-thumb {
    background-color: #434343;
    border-radius: 6px;
    border: 2px solid #262626;
}

::-webkit-scrollbar-track,
body::-webkit-scrollbar-track {
    background: #262626;
}

::-webkit-scrollbar-track,
body::-webkit-scrollbar-track {
    background: #262626;
}

.ant-drawer-body::-webkit-scrollbar {
    display: none;
}

// 转场动画

.transition-margin-left {
	transition: margin-left .3s cubic-bezier(.7,.3,.1,1);
}

.transition-transform {
	transition: transform 0.3s cubic-bezier(0.7, 0.3, 0.1, 1);
}

.transition-box-shadow {
	transition: box-shadow 0.3s cubic-bezier(0.7, 0.3, 0.1, 1)
}

.transition-box-shadow {
	transition: background-color 0.3s ease 0s, min-width 0.3s ease 0s, max-width 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;

	transition: background-color 0.3s ease 0s, min-width 0.3s ease 0s, max-width 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
	transition: background-color 0.3s ease 0s, min-width 0.3s ease 0s, max-width 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;

	transition: transform .3s cubic-bezier(.7,.3,.1,1),box-shadow .3s cubic-bezier(.7,.3,.1,1);
	transition: transform .3s cubic-bezier(.7,.3,.1,1);
}

